Updated links to the packages

--- a/downloads/packages.html
+++ b/downloads/packages.html
@@ -123,6 +123,8 @@ var WRInitTime=(new Date()).getTime();
 <div id="wrap" class="container">
 <h2>2.6.x</h2>
 
+<p>Development of Cobbler 2.6.x is targeted at Enterprise Linux 6 (eg. RHEL6/CentOS6) and thus requires python 2.6</p>
+
 <ul>
 <li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/CentOS_CentOS-6/">CentOS 6</a></li>
 <li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/RedHat_RHEL-6/">RHEL 6</a></li>
@@ -132,10 +134,17 @@ var WRInitTime=(new Date()).getTime();
 <li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/openSUSE_12.3/">openSUSE 12.3</a></li>
 <li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/openSUSE_13.1/">openSUSE 13.1</a></li>
 <li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/openSUSE_Factory/">openSUSE Factory</a></li>
+<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/Debian_7.0/">Debian 7</a></li>
+<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/xUbuntu_12.04/">Ubuntu 12.04</a></li>
+<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/xUbuntu_12.10/">Ubuntu 12.10</a></li>
+<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/xUbuntu_13.10/">Ubuntu 13.10</a></li>
+<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/xUbuntu_14.04/">Ubuntu 14.04</a></li>
 </ul>
 
 
 <h2>2.4.x</h2>
+
+<p>Development of Cobbler 2.4.x is targeted at Enterprise Linux 5 (eg. RHEL5/CentOS5) and thus requires python 2.4</p>
 
 <ul>
 <li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler24/Fedora_18/">Fedora 18</a></li>
