--- a/downloads/source.html
+++ b/downloads/source.html
@@ -124,6 +124,7 @@ var WRInitTime=(new Date()).getTime();
 <h2>2.6.x</h2>
 
 <ul>
+<li><a href="https://github.com/cobbler/cobbler/releases/tag/v2.6.1">Cobbler 2.6.1</a></li>
 <li><a href="https://github.com/cobbler/cobbler/releases/tag/v2.6.0">Cobbler 2.6.0</a></li>
 </ul>
 
