--- a/downloads/source.html
+++ b/downloads/source.html
@@ -132,6 +132,7 @@ var WRInitTime=(new Date()).getTime();
 <h2>2.4.x</h2>
 
 <ul>
+<li><a href="https://github.com/cobbler/cobbler/releases/tag/v2.4.5">Cobbler 2.4.5</a></li>
 <li><a href="https://github.com/cobbler/cobbler/releases/tag/v2.4.4">Cobbler 2.4.4</a></li>
 <li><a href="https://github.com/cobbler/cobbler/releases/tag/v2.4.3">Cobbler 2.4.3</a></li>
 <li><a href="https://github.com/cobbler/cobbler/releases/tag/v2.4.2">Cobbler 2.4.2</a></li>
