--- a/manuals/2.6.0/1/1_-_Release_Notes.html
+++ b/manuals/2.6.0/1/1_-_Release_Notes.html
@@ -141,19 +141,10 @@ var WRInitTime=(new Date()).getTime();
 <ul>
 <li>pre_install_network_config: only use slaves with a valid MAC address</li>
 <li>Remove colon from VLAN regex pattern</li>
-<li><ol>
-<li> Improve exception logging in BootCLI</li>
-</ol>
-</li>
+<li>Improve exception logging in BootCLI (Issue 148)</li>
 <li>Item.set_name optimizations</li>
-<li><ol>
-<li> Minor improvement to LDAP configuration</li>
-</ol>
-</li>
-<li><ol>
-<li> Fixes to Makefile</li>
-</ol>
-</li>
+<li>Minor improvement to LDAP configuration (Issue 217)</li>
+<li>Fixes to Makefile (Issue 555)</li>
 </ul>
 
 
