--- a/downloads/2.6.x.html
+++ b/downloads/2.6.x.html
@@ -5,7 +5,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta name="author" content="Cobbler development team" />
 
-   <title>Source releases</title>
+   <title>Cobbler 2.6.x</title>
 
    <!-- CSS -->
    <link rel="stylesheet" type="text/css" href="http://code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" />
@@ -121,23 +121,35 @@ var WRInitTime=(new Date()).getTime();
 
 
 <div id="wrap" class="container">
-<h2>2.6.x</h2>
+<p>Maintenance of the Cobbler 2.6.x series is primarily targeted at Enterprise Linux 6 (eg. RHEL6/CentOS6) and therefore requires at least python 2.6.</p>
+
+<h2>Source</h2>
 
 <ul>
+<li><a href="https://github.com/cobbler/cobbler/releases/tag/v2.6.2">Cobbler 2.6.2</a></li>
 <li><a href="https://github.com/cobbler/cobbler/releases/tag/v2.6.1">Cobbler 2.6.1</a></li>
 <li><a href="https://github.com/cobbler/cobbler/releases/tag/v2.6.0">Cobbler 2.6.0</a></li>
 </ul>
 
 
-<h2>2.4.x</h2>
+<h2>Packages</h2>
 
 <ul>
-<li><a href="https://github.com/cobbler/cobbler/releases/tag/v2.4.5">Cobbler 2.4.5</a></li>
-<li><a href="https://github.com/cobbler/cobbler/releases/tag/v2.4.4">Cobbler 2.4.4</a></li>
-<li><a href="https://github.com/cobbler/cobbler/releases/tag/v2.4.3">Cobbler 2.4.3</a></li>
-<li><a href="https://github.com/cobbler/cobbler/releases/tag/v2.4.2">Cobbler 2.4.2</a></li>
-<li><a href="https://github.com/cobbler/cobbler/releases/tag/v2.4.1">Cobbler 2.4.1</a></li>
-<li><a href="https://github.com/cobbler/cobbler/releases/tag/cobbler-2.4.0-1">Cobbler 2.4.0</a></li>
+<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/CentOS_CentOS-6/">CentOS 6</a></li>
+<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/CentOS_CentOS-7/">CentOS 7</a></li>
+<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/RedHat_RHEL-6/">RHEL 6</a></li>
+<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/RedHat_RHEL-7/">RHEL 7</a></li>
+<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/Fedora_18/">Fedora 18</a></li>
+<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/Fedora_19/">Fedora 19</a></li>
+<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/Fedora_20/">Fedora 20</a></li>
+<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/openSUSE_12.3/">openSUSE 12.3</a></li>
+<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/openSUSE_13.1/">openSUSE 13.1</a></li>
+<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/openSUSE_Factory/">openSUSE Factory</a></li>
+<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/Debian_7.0/">Debian 7</a></li>
+<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/xUbuntu_12.04/">Ubuntu 12.04</a></li>
+<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/xUbuntu_12.10/">Ubuntu 12.10</a></li>
+<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/xUbuntu_13.10/">Ubuntu 13.10</a></li>
+<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/xUbuntu_14.04/">Ubuntu 14.04</a></li>
 </ul>
 
 
