Update to 2.8 manual

--- a/manuals/2.8.0/1/1_-_Release_Notes.html
+++ b/manuals/2.8.0/1/1_-_Release_Notes.html
@@ -136,11 +136,8 @@ var WRInitTime=(new Date()).getTime();
 <li>If --dns-name is specified, set it as DHCP host-name in preference to the --hostname field</li>
 <li>Allow user to choose whether or not to delete item(s) recursively (cobbler-web)</li>
 <li>Set ksdevice kernel option to MAC address for ppc systems as bootif is not used by yaboot</li>
-<li>Return to list of snippets/kickstarts when snippet/kickstart is saved (cobbler-web)
-
-<h2>- Layout in snippet/kickstart edit form has been improved (cobbler-web)</h2>
-
-<p>-</p></li>
+<li>Return to list of snippets/kickstarts when snippet/kickstart is saved (cobbler-web)</li>
+<li>Layout in snippet/kickstart edit form has been improved (cobbler-web)</li>
 </ul>
 
 
@@ -154,9 +151,8 @@ var WRInitTime=(new Date()).getTime();
 <li>Remove legacy (EL5/6) cruft from the RPM specfile</li>
 <li>Koan: use the print function instead of the print statement</li>
 <li>Minor improvement to LDAP configuration (#217)</li>
-<li>Improvements to the unittest framework
-
-<h2>- The user manual has been completely reviewed and lots of errors were fixed</h2></li>
+<li>Improvements to the unittest framework</li>
+<li>The user manual has been completely reviewed and lots of errors were fixed</li>
 </ul>
 
 
