--- a/manuals/2.8.0/1/2_-_Platform_Support.html
+++ b/manuals/2.8.0/1/2_-_Platform_Support.html
@@ -188,12 +188,33 @@ var WRInitTime=(new Date()).getTime();
  </tr>
  <tr>
   <td class="span2"></td>
-  <td class="span2">RHEL/CentOS 7</td>
+  <td class="span2">RHEL / CentOS 7</td>
   <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
   <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
   <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
   <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
   <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+ </tr>
+ <tr>
+  <td colspan="7">SuSE</td>
+ </tr>
+ <tr>
+  <td class="span2"></td>
+  <td class="span2">OpenSuSE 12.3</td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-wrench"></i></td>
+ </tr>
+ <tr>
+  <td class="span2"></td>
+  <td class="span2">OpenSuSE 13.1</td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-wrench"></i></td>
  </tr>
 </table>
 
@@ -210,7 +231,38 @@ var WRInitTime=(new Date()).getTime();
   <td class="center span1">Build ISO</td>
   <td class="center span1">Kickstarts/Snippets</td>
  </tr>
-<tr>
+ <tr>
+  <td colspan="7">Red Hat</td>
+ </tr>
+ <tr>
+ <tr>
+  <td class="span2"></td>
+  <td class="span2">RHEL/CentOS 4</td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+ </tr>
+ <tr>
+  <td class="span2"></td>
+  <td class="span2">RHEL/CentOS 5</td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+ </tr>
+ <tr>
+  <td class="span2"></td>
+  <td class="span2">RHEL/CentOS 6</td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
+ </tr>
+ <tr>
   <td colspan="7">Ubuntu</td>
  </tr>
  <tr>
@@ -338,24 +390,6 @@ var WRInitTime=(new Date()).getTime();
  </tr>
  <tr>
   <td class="span2"></td>
-  <td class="span2">OpenSuSE 12.3</td>
-  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
-  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
-  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
-  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
-  <td class="center span1"><i class="icon-wrench"></i></td>
- </tr>
- <tr>
-  <td class="span2"></td>
-  <td class="span2">OpenSuSE 13.1</td>
-  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
-  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
-  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
-  <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
-  <td class="center span1"><i class="icon-wrench"></i></td>
- </tr>
- <tr>
-  <td class="span2"></td>
   <td class="span2">SLES 10 sp4</td>
   <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
   <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
@@ -408,6 +442,22 @@ var WRInitTime=(new Date()).getTime();
   <td class="center span1"><i class="icon-ok-sign text-success"></i></td>
   <td class="center span1"><i class="icon-wrench"></i></td>
  </tr>
+</table>
+
+
+<h2>Tier 3 platforms</h2>
+
+<table class="table table-hover">
+ <tr>
+  <td class=""></td>
+  <td class=""></td>
+  <td class="center span1">Packages</td>
+  <td class="center span1">Import</td>
+  <td class="center span1">PXE</td>
+  <td class="center span1">Build ISO</td>
+  <td class="center span1">Kickstarts/Snippets</td>
+ </tr>
+<tr>
  <tr>
   <td colspan="7">VMware</td>
  </tr>
