--- a/downloads/2.6.x.html
+++ b/downloads/2.6.x.html
@@ -126,6 +126,7 @@ var WRInitTime=(new Date()).getTime();
 <h2>Source</h2>
 
 <ul>
+<li><a href="https://github.com/cobbler/cobbler/releases/tag/v2.6.6">Cobbler 2.6.6</a></li>
 <li><a href="https://github.com/cobbler/cobbler/releases/tag/v2.6.5">Cobbler 2.6.5</a></li>
 <li><a href="https://github.com/cobbler/cobbler/releases/tag/v2.6.4">Cobbler 2.6.4</a></li>
 <li><a href="https://github.com/cobbler/cobbler/releases/tag/v2.6.3">Cobbler 2.6.3</a></li>
@@ -147,8 +148,11 @@ var WRInitTime=(new Date()).getTime();
 <li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/Fedora_20/">Fedora 20</a></li>
 <li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/openSUSE_12.3/">openSUSE 12.3</a></li>
 <li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/openSUSE_13.1/">openSUSE 13.1</a></li>
+<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/openSUSE_13.2/">openSUSE 13.2</a></li>
 <li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/openSUSE_Factory/">openSUSE Factory</a></li>
 <li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/Debian_7.0/">Debian 7</a></li>
+<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/ScientificLinux_6/">Scientific Linux 6</a></li>
+<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/ScientificLinux_7/">Scientific Linux 7</a></li>
 <li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/xUbuntu_12.04/">Ubuntu 12.04</a></li>
 <li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/xUbuntu_12.10/">Ubuntu 12.10</a></li>
 <li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/xUbuntu_13.10/">Ubuntu 13.10</a></li>
