--- a/manuals/developer/1_-_Patch-process.html
+++ b/manuals/developer/1_-_Patch-process.html
@@ -187,9 +187,9 @@ Python 2.2 for koan, so stay away from metaclasses and fancy stuff
 #cobbler-devel on irc.freenode.net, as there are folks around to
 answer questions, etc.</p>
 
-<h2>Contributing to the website: http://www.cobblerd.org</h2>
+<h2>Contributing to the website: http://cobbler.github.com/</h2>
 
-<p>The github-based git repository for the www.cobblerd.org website itself is at <a href="https://github.com/cobbler/cobbler.github.com"> https://github.com/cobbler/cobbler.github.com </a>.</p>
+<p>The github-based git repository for the Cobbler website itself is at <a href="https://github.com/cobbler/cobbler.github.com"> https://github.com/cobbler/cobbler.github.com </a>.</p>
 
 <p>If you want to contribute changes to the website, you will need <a href="http://jekyllrb.com">jekyll</a>.</p>
 
