--- a/manuals/developer/1_-_Patch-process.html
+++ b/manuals/developer/1_-_Patch-process.html
@@ -187,7 +187,7 @@ Python 2.2 for koan, so stay away from metaclasses and fancy stuff
 #cobbler-devel on irc.freenode.net, as there are folks around to
 answer questions, etc.</p>
 
-<h2>Contributing to the website: http://cobbler.github.com/</h2>
+<h2>Contributing to the website: https://cobbler.github.io/</h2>
 
 <p>The github-based git repository for the Cobbler website itself is at <a href="https://github.com/cobbler/cobbler.github.com"> https://github.com/cobbler/cobbler.github.com </a>.</p>
 
