--- a/manuals/2.6.0/3/4/2_-_Managing_DNS.html
+++ b/manuals/2.6.0/3/4/2_-_Managing_DNS.html
@@ -124,7 +124,7 @@ var WRInitTime=(new Date()).getTime();
   <div class="span8">
 <ul class="breadcrumb"><li><a href="/manuals">manuals</a> <span class="divider">/</span></li><li><a href="/manuals/2.6.0">2.6.0</a> <span class="divider">/</span></li><li><a href="/manuals/2.6.0/3_-_General_Topics.html">3</a> <span class="divider">/</span></li><li><a href="/manuals/2.6.0/3/4_-_Managing_Services_With_Cobbler.html">4</a> <span class="divider">/</span></li><li class="active">Managing DNS</li></ul>
    <h1>Managing DNS</h1>
-<p>You may want cobbler to manage the DNS entries of its client systems.  Cobbler can do so automatically by using templates.  It currently supports either dnsmasq (which also provides DHCP) or BIND. Cobbler also has the ability to handle <a href="DHCP%20Management">DHCP Management</a>.</p>
+<p>You may want cobbler to manage the DNS entries of its client systems.  Cobbler can do so automatically by using templates.  It currently supports either dnsmasq (which also provides DHCP) or BIND. Cobbler also has the ability to handle <a href="/manuals/2.6.0/3/4/1_-_Managing_DHCP.html">DHCP Management</a>.</p>
 
 <p>To use BIND, your <code>/etc/cobbler/modules.conf</code> should contain:</p>
 
