--- a/manuals/developer/index.html
+++ b/manuals/developer/index.html
@@ -147,17 +147,17 @@ Get the latest epel-release RPM from <code>http://download.fedoraproject.org/pub
 
 <p>Install development dependencies:</p>
 
-<pre><code># yum install python-devel pyflakes python-pep8 python-sphinx rpm-build
+<pre><code># yum install git make python-devel pyflakes python-pep8 python-sphinx rpm-build
 </code></pre>
 
 <p>Install runtime dependencies:</p>
 
-<pre><code># yum install git make python-netaddr python-simplejson PyYAML python-cheetah httpd mod_wsgi
+<pre><code># yum install python-netaddr python-simplejson PyYAML python-cheetah httpd mod_wsgi
 </code></pre>
 
 <p>Initially, to run Cobbler without using packages:</p>
 
-<pre><code># git clone https://github.com/&lt;your username&gt;/cobbler.git
+<pre><code># git clone https://github.com/cobbler/cobbler.git
 # cd cobbler
 # make install
 </code></pre>
@@ -191,7 +191,7 @@ Get the latest epel-release RPM from <code>http://download.fedoraproject.org/pub
 <li>Validate your code by using <code>make qa</code>.</li>
 <li>Keep things simple, keep in mind that this is a tool for sysadmins and not python developers.</li>
 <li>Use modules that are easily available (eg. EPEL) but preferrably in the base OS, otherwise they have to be packaged with the app, which usually runs afoul of distribution packaging guidelines.</li>
-<li>At least for now we have to support Python 2.7 for Cobbler and ython 2.6 for Koan.</li>
+<li>At least for now we have to support Python 2.7 for Cobbler and Python 2.6 for Koan.</li>
 </ul>
 
 
