--- a/manuals/2.8.0/1/1_-_Release_Notes.html
+++ b/manuals/2.8.0/1/1_-_Release_Notes.html
@@ -149,17 +149,21 @@ var WRInitTime=(new Date()).getTime();
 <h3>Feature improvements</h3>
 
 <ul>
-<li>Integrated <code>pyflakes</code> into the build system and fixed all reported issues
+<li>Integrated <code>pyflakes</code> into the build system and fixed all reported issues</li>
+<li>Add support for SLES12 SP1 to the signatures (#1597)
 
-<h2>- Add support for SLES12 SP1 to the signatures (#1597)</h2></li>
+<h2>- Add support for FreeBSD 9.1, 9.2, 9.3, 10.1 and 10.2</h2></li>
 </ul>
 
 
 <h3>Bugfixes</h3>
 
-<h2>- Allow the use of relative paths when importing a distro (#1613)</h2>
+<ul>
+<li>Allow the use of relative paths when importing a distro (#1613)
 
-<p>-</p>
+<h2>- Improve handling of yum-utils/dnf, rsync in <code>cobbler check</code> and RPM packaging (#1611, #1586, #1543, #1427, #791)</h2></li>
+</ul>
+
 
      <hr>
      <div id="disqus_thread"></div>
