--- a/downloads/2.6.x.html
+++ b/downloads/2.6.x.html
@@ -126,6 +126,7 @@ var WRInitTime=(new Date()).getTime();
 <h2>Source</h2>
 
 <ul>
+<li><a href="https://github.com/cobbler/cobbler/releases/tag/v2.6.10">Cobbler 2.6.11</a></li>
 <li><a href="https://github.com/cobbler/cobbler/releases/tag/v2.6.10">Cobbler 2.6.10</a></li>
 <li><a href="https://github.com/cobbler/cobbler/releases/tag/v2.6.9">Cobbler 2.6.9</a></li>
 <li><a href="https://github.com/cobbler/cobbler/releases/tag/v2.6.8">Cobbler 2.6.8</a></li>
@@ -150,6 +151,7 @@ var WRInitTime=(new Date()).getTime();
 <li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/Fedora_20/">Fedora 20</a></li>
 <li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/Fedora_21/">Fedora 21</a></li>
 <li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/Fedora_22/">Fedora 22</a></li>
+<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/Fedora_23/">Fedora 22</a></li>
 <li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/openSUSE_12.3/">openSUSE 12.3</a></li>
 <li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/openSUSE_13.1/">openSUSE 13.1</a></li>
 <li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/openSUSE_13.2/">openSUSE 13.2</a></li>
@@ -162,6 +164,7 @@ var WRInitTime=(new Date()).getTime();
 <li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/xUbuntu_14.04/">Ubuntu 14.04</a></li>
 <li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/xUbuntu_14.10/">Ubuntu 14.10</a></li>
 <li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/xUbuntu_15.04/">Ubuntu 15.04</a></li>
+<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/xUbuntu_15.10/">Ubuntu 15.10</a></li>
 </ul>
 
 
