--- a/manuals/2.6.0/1/1_-_Release_Notes.html
+++ b/manuals/2.6.0/1/1_-_Release_Notes.html
@@ -124,6 +124,28 @@ var WRInitTime=(new Date()).getTime();
   <div class="span8">
 <ul class="breadcrumb"><li><a href="/manuals">manuals</a> <span class="divider">/</span></li><li><a href="/manuals/2.6.0">2.6.0</a> <span class="divider">/</span></li><li><a href="/manuals/2.6.0/1_-_About_Cobbler.html">1</a> <span class="divider">/</span></li><li class="active">What's New</li></ul>
    <h1>What's New</h1>
+<h2>2.6.11</h2>
+
+<h3>Feature improvements</h3>
+
+<ul>
+<li>Add support for FreeBSD 9.1, 9.2, 9.3, 10.1 and 10.2</li>
+<li>Add support for SLES 12.1 in signatures (#1597)</li>
+<li>Koan: use new dracut ip option for configuring static interfaces</li>
+</ul>
+
+
+<h3>Bugfixes</h3>
+
+<ul>
+<li>Improve handling of yum-utils/dnf, rsync in <code>cobbler check</code> and RPM packaging (#1611, #1586, #1543, #1427, #791)</li>
+<li>Change online Cobbler resource URL's from cobbler.github.com to cobbler.github.io</li>
+<li>Fix bonding for RHEL 6 and RHEL 7</li>
+<li>Koan: fix incompatibility with F21 virt-install (#1398)</li>
+<li>Koan: fix os_version conditionals</li>
+</ul>
+
+
 <h2>2.6.10</h2>
 
 <h3>Feature improvements</h3>
