--- a/downloads/2.8.x.html
+++ b/downloads/2.8.x.html
@@ -132,7 +132,23 @@ var WRInitTime=(new Date()).getTime();
 
 <h2>Packages</h2>
 
-<p>Work in progress</p>
+<ul>
+<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/CentOS_CentOS-6/">CentOS 6</a></li>
+<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/CentOS_CentOS-7/">CentOS 7</a></li>
+<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/RedHat_RHEL-6/">RHEL 6</a></li>
+<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/RedHat_RHEL-7/">RHEL 7</a></li>
+<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/Fedora_23/">Fedora 23</a></li>
+<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/Fedora_24/">Fedora 24</a></li>
+<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/openSUSE_13.2/">openSUSE 13.2</a></li>
+<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/openSUSE_Factory_ARM/">openSUSE Factory ARM</a></li>
+<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/openSUSE_Factory_PowerPC/">openSUSE Factory PowerPC</a></li>
+<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/openSUSE_Leap_42.1/">openSUSE Leap 42.1</a></li>
+<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/openSUSE_Leap_42.2/">openSUSE Leap 42.2</a></li>
+<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/openSUSE_Tumbleweed/">openSUSE Tumbleweed</a></li>
+<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/ScientificLinux_6/">Scientific Linux 6</a></li>
+<li><a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/ScientificLinux_7/">Scientific Linux 7</a></li>
+</ul>
+
 
 </div> <!-- end wrap -->
 
